Some clarifications about keywords

--- a/manifest.json
+++ b/manifest.json
@@ -13,19 +13,19 @@
       "id": "pass_ext",
       "type": "keyword",
       "name": "Pass",
-      "description": "Copy your passwords from password store",
+      "description": "Shortcut for enabling the extension.",
       "default_value": "pass"
     },
     {
         "id": "custom_command",
         "type": "input",
         "name": "Run custom command",
-        "description": "Run custom command before and after copying password. Ex: Put clipboard manager into offline (unmonitoring) mode"
+        "description": "Run custom command before and after copying password. Ex: Put clipboard manager into offline (unmonitoring) mode. (Tip: Use full binary path)"
     },
     {
         "id": "custom_command_delay",
         "type": "input",
-        "name": "Delay time before executing second command",
+        "name": "Delay time before executing second command (by seconds)",
         "description": "Sometimes, executing two commands one ofter the other causes problems. Increase delay time to solve this",
         "default_value": 0
     }
